--- a/ChatGPT5_simple.html
+++ b/ChatGPT5_simple.html
@@ -1,78 +1,274 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>나의 첫 홈페이지</title>
-  <meta name="description" content="아주 간단한 HTML만으로 만든 홈페이지 샘플" />
-  <!-- 파비콘이 없어도 오류가 나지 않도록 빈 data URL 사용 -->
-  <link rel="icon" href="data:," />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>나의 첫 홈페이지 - 세련된 버전</title>
+  <style>
+    /* 전역 스타일 */
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      font-family: Arial, "Helvetica Neue", sans-serif;
+      line-height: 1.6;
+      color: #333;
+      background-color: #f5f7fa;
+    }
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+    /* 헤더 및 네비게이션 */
+    header {
+      background-color: #ffffff;
+      border-bottom: 1px solid #e5e7eb;
+      position: sticky;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
+    }
+    .container {
+      width: 90%;
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 1rem 0;
+    }
+    .logo {
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: #2c3e50;
+    }
+    nav {
+      display: flex;
+      gap: 1.5rem;
+    }
+    nav a {
+      font-size: 0.9rem;
+      font-weight: 500;
+      color: #5a5a5a;
+      transition: color 0.3s ease;
+    }
+    nav a:hover {
+      color: #1d4ed8;
+    }
+    .header-content {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    /* 히어로 영역 */
+    .hero {
+      background: linear-gradient(to right, #6366f1, #3b82f6);
+      color: #ffffff;
+      padding: 4rem 0;
+      text-align: center;
+    }
+    .hero h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
+    }
+    .hero p {
+      font-size: 1.1rem;
+      margin-bottom: 1.5rem;
+      opacity: 0.9;
+    }
+    .hero .cta-button {
+      display: inline-block;
+      padding: 0.75rem 1.5rem;
+      background-color: #ffffff;
+      color: #3b82f6;
+      border-radius: 9999px;
+      font-weight: 600;
+      transition: background-color 0.3s ease, color 0.3s ease;
+    }
+    .hero .cta-button:hover {
+      background-color: #dbeafe;
+      color: #1e40af;
+    }
+    /* 섹션 기본 설정 */
+    section {
+      padding: 4rem 0;
+    }
+    section h2 {
+      text-align: center;
+      margin-bottom: 2rem;
+      font-size: 1.8rem;
+      color: #1f2937;
+    }
+    /* 기능 섹션 */
+    .features {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 2rem;
+    }
+    .feature-card {
+      background-color: #ffffff;
+      border-radius: 0.5rem;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+      padding: 2rem;
+      text-align: center;
+      transition: transform 0.2s ease;
+    }
+    .feature-card:hover {
+      transform: translateY(-5px);
+    }
+    .feature-card h3 {
+      margin-bottom: 0.75rem;
+      font-size: 1.2rem;
+      color: #111827;
+    }
+    .feature-card p {
+      font-size: 0.9rem;
+      color: #4b5563;
+    }
+    /* 문의 섹션 */
+    .contact-form {
+      max-width: 600px;
+      margin: 0 auto;
+    }
+    .form-group {
+      margin-bottom: 1rem;
+    }
+    .form-group label {
+      display: block;
+      margin-bottom: 0.5rem;
+      font-weight: 600;
+      color: #374151;
+    }
+    .form-group input,
+    .form-group textarea {
+      width: 100%;
+      padding: 0.75rem;
+      border: 1px solid #d1d5db;
+      border-radius: 0.375rem;
+      font-size: 0.9rem;
+    }
+    .form-group textarea {
+      resize: vertical;
+      min-height: 150px;
+    }
+    .contact-form button {
+      display: block;
+      width: 100%;
+      background-color: #3b82f6;
+      color: #ffffff;
+      border: none;
+      padding: 0.75rem;
+      border-radius: 0.375rem;
+      font-size: 1rem;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    .contact-form button:hover {
+      background-color: #2563eb;
+    }
+    /* 푸터 */
+    footer {
+      background-color: #f9fafb;
+      text-align: center;
+      padding: 2rem 0;
+      color: #6b7280;
+      font-size: 0.875rem;
+    }
+    /* 반응형 조정 */
+    @media (max-width: 768px) {
+      .hero h1 {
+        font-size: 2rem;
+      }
+      .hero p {
+        font-size: 1rem;
+      }
+    }
+  </style>
 </head>
 <body>
-  <!-- ===== 헤더 ===== -->
   <header>
-    <h1>나의 첫 홈페이지</h1>
-    <p>HTML만으로 만든 초간단 샘플</p>
-
-    <!-- 간단한 내비게이션 (동일 문서 내 앵커 이동) -->
-    <nav>
-      <a href="#about">소개</a> ·
-      <a href="#features">기능</a> ·
-      <a href="#contact">문의</a>
-    </nav>
+    <div class="container header-content">
+      <div class="logo">My Site</div>
+      <nav>
+        <a href="#intro">소개</a>
+        <a href="#features">기능</a>
+        <a href="#contact">문의</a>
+      </nav>
+    </div>
   </header>
 
-  <!-- ===== 본문 ===== -->
   <main>
-    <!-- 소개 섹션 -->
-    <section id="about">
-      <h2>소개</h2>
-      <p>이 페이지는 하나의 HTML 파일만으로 구성된 기본 샘플입니다. 필요에 따라 텍스트만 바꿔도 간단한 홈페이지로 사용할 수 있어요.</p>
+    <!-- 히어로 영역 -->
+    <section class="hero">
+      <div class="container">
+        <h1>나의 첫 홈페이지에 오신 것을 환영합니다</h1>
+        <p>간단한 HTML로도 충분히 아름다운 웹사이트를 만들 수 있습니다.</p>
+        <a href="#intro" class="cta-button">더 알아보기</a>
+      </div>
     </section>
 
-    <!-- 기능 섹션 -->
+    <!-- 소개 -->
+    <section id="intro">
+      <div class="container">
+        <h2>소개</h2>
+        <p style="text-align:center; max-width: 700px; margin: 0 auto;">
+          이 페이지는 하나의 HTML 파일만으로 구성된 기본 샘플을 조금 더 세련된 디자인으로 변형한 것입니다.
+          텍스트와 이미지는 자유롭게 수정할 수 있으며, 외부 라이브러리 없이도 깔끔한 레이아웃을 구현합니다.
+        </p>
+      </div>
+    </section>
+
+    <!-- 기능 -->
     <section id="features">
-      <h2>기능</h2>
-      <ul>
-        <li>빠른 로딩 (외부 스크립트/스타일 없음)</li>
-        <li>간단한 문서 구조 (header, main, section, footer)</li>
-        <li>모바일 친화적 <code>&lt;meta name="viewport"&gt;</code> 적용</li>
-      </ul>
-
-      <!-- 샘플 이미지: 인터넷 연결이 없으면 표시되지 않을 수 있습니다. -->
-      <figure>
-        <img src="https://via.placeholder.com/800x300?text=Banner" alt="배너 이미지 예시" width="800" height="300" />
-        <figcaption>이미지 자리는 원하는 그림으로 바꿔보세요.</figcaption>
-      </figure>
+      <div class="container">
+        <h2>기능</h2>
+        <div class="features">
+          <div class="feature-card">
+            <h3>빠른 로딩</h3>
+            <p>외부 스크립트나 스타일 시트를 사용하지 않아 가볍고 빠른 페이지입니다.</p>
+          </div>
+          <div class="feature-card">
+            <h3>간단한 구조</h3>
+            <p>header, section, footer 등 기본 레이아웃만으로 구성되어 유지보수가 쉽습니다.</p>
+          </div>
+          <div class="feature-card">
+            <h3>모바일 최적화</h3>
+            <p>Responsive 디자인으로 모든 기기에서 아름답게 표시됩니다.</p>
+          </div>
+        </div>
+      </div>
     </section>
 
-    <!-- 문의 섹션 (동작하는 백엔드는 없음) -->
+    <!-- 문의 -->
     <section id="contact">
-      <h2>문의</h2>
-      <address>
-        이메일: <a href="mailto:you@example.com">you@example.com</a><br />
-        Instagram: <a href="https://instagram.com/yourid">@yourid</a>
-      </address>
-
-      <form action="#" method="post">
-        <p>
-          <label>이름
-            <input type="text" name="name" required />
-          </label>
-        </p>
-        <p>
-          <label>메시지
-            <textarea name="message" rows="4" cols="30" required></textarea>
-          </label>
-        </p>
-        <p><button type="submit">보내기</button></p>
-      </form>
+      <div class="container">
+        <h2>문의</h2>
+        <div class="contact-form">
+          <form>
+            <div class="form-group">
+              <label for="name">이름</label>
+              <input type="text" id="name" name="name" placeholder="이름을 입력하세요" required />
+            </div>
+            <div class="form-group">
+              <label for="email">이메일</label>
+              <input type="email" id="email" name="email" placeholder="이메일을 입력하세요" required />
+            </div>
+            <div class="form-group">
+              <label for="message">메시지</label>
+              <textarea id="message" name="message" placeholder="메시지를 입력하세요" required></textarea>
+            </div>
+            <button type="submit">보내기</button>
+          </form>
+          <p style="margin-top: 1rem; font-size: 0.9rem; text-align: center;">
+            이메일: you@example.com · Instagram: @yourid
+          </p>
+        </div>
+      </div>
     </section>
   </main>
 
-  <!-- ===== 푸터 ===== -->
   <footer>
-    <small>© 2025 My Site. 모든 권리 보유.</small>
+    © 2025 My Site. 모든 권리 보유.
   </footer>
 </body>
 </html>
